--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,16 @@
 }
 
 .container {
+    border: 1px dashed black;
+    padding: 1%;
+    margin: 1.5% 15%;
+    background-color: yellow;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.link {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
