--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,60 @@
     box-sizing: border-box;
 }
 
-.container {
-    border: 1px dashed black;
-    padding: 1%;
-    margin: 1.5% 15%;
-    background-color: yellow;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.container-header{
+    background-color: rgb(131, 199, 238);
+    padding: 0;
+    margin: 0;
 }
 
 .link {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.item-header {
+    border: 2px dashed black;
+    padding: 1%;
+    margin: 1% 15%;
+    background-color: yellow;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.container-1 {
+    padding: 2%;
+    background-color: blue;
+}
+
+.item-1 {
+    border: 2px dashed black;
+    padding: 10%;
+    margin: 1.5% 25%;
+    background-color: rgb(248, 147, 164);
+}
+
+.container-2 {
+    padding: 2%;
+    background-color: white;
+    font-size: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.item-2-1 {
+    border: 2px dashed black;
+    padding: 10%;
+    background-color: rgb(93, 164, 245);
+    display: inline-block;
+}
+
+.item-2-2 {
+    border: 2px dashed black;
+    padding: 10%;
+    background-color: pink;
+    display: inline-block;
 }
