--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 }
 
 .link {
+    border: 2px dashed black;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -19,13 +20,21 @@
 .item-header {
     border: 2px dashed black;
     padding: 1%;
-    margin: 1% 15%;
+    margin: 0 15%;
     background-color: yellow;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
 }
+
+.item-header-1 {
+    border: 2px dashed black;
+    padding: 1%;
+}
+
+/*.item-header-2 {
+    border: 2px dashed black;
+}*/
 
 .container-1 {
     padding: 2%;
@@ -130,24 +139,39 @@
 }
 
 .container-6 {
-    padding: 0%;
+    padding: 2%;
     background-color: rgb(29, 25, 25);
-    font-size: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
-.item-6-1 {
+.container-6-2 {
+    border: 2px dashed black;
+    display: flex;
+    height: 90%;
+    padding: 15%;
+    margin: 0;
+    width: 60%;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.column-1 {
+    flex: 2;
     border: 2px dashed black;
     padding: 15%;
-    margin: 1% 0 2% 20%;
+    width: 40%;
+    margin: 0;
     background-color: rgb(245, 88, 135);
 }
 
-.item-6-2 {
+.column-2 {
+    flex: 1;
+    height: 100%;
     border: 2px dashed white;
-    padding: 10%;
-    margin: 1% 0 2% 0;
+    padding: 15%;
+    width: 20%;
+    margin: 0;
     background-color: rgb(4, 122, 103);
 }
